<resources>
    <string name="app_name">FavDish</string>
    <string name="splash_screen_title">Favourite Dish</string>
    <string name="lbl_add_dish">ADD DISH</string>
    <string name="add_image_button">Image To Add Button</string>
    <string name="add_dish">Add Dish</string>
    <string name="dish_image">Image of dish</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="lbl_direction_to_cook">Direction To Cook</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="lbl_camera">Camera</string>
    <string name="title_select_image">Select Image</string>
    <string name="dialog_error_p_off">It looks like you have turned off permissions required for thos feature. It can be enabled under Application Settings</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="permission_denied">You have denied the storage permission to select image.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="title_select_dish_category">Select Dish Category</string>
    <string name="title_select_dish_type">Select Dish Type</string>
    <string name="title_select_dish_cooking_time">Select DIsh Cooking Time</string>
    <string name="title_all_dishes">All Dishes</string>
    <string name="title_favourite_dishes">Favourite</string>
    <string name="title_random_dish">Random Dish</string>
    <string name="title_all_dish">All Dishes</string>
    <string name="no_dish_is_found">No dish is found</string>
    <string name="image_of_dish">Image of dish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dish_details">Dish Details</string>

    <string name="lbl_estimate_cooking_time">The approx time required to cook the dish is %1$s minutes.</string>
    <string name="make_dish_favourite">Button that adds the dish to the Favorites</string>
    <string name="no_favorite_dish">There are no favourite dishes. Please, add some</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="delete_dish">Delete Dish</string>
    <string name="more_action">Additional button to edit or delete item</string>
    <string name="update_dish">Update Dish</string>
    <string name="title_delete_dish">Delete Dish</string>

    <string name="msg_delete_dish_dialog">Are you sure you want to delete %1$s.</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="filter_title">Filter</string>
    <string name="title_select_item_to_filter">SELECT ITEM TO FILTER</string>
    <string name="msg_added_to_favorites">Dish was added to favorites</string>
    <string name="msg_already_added_to_favorites">You have already added the dish to your favorites.</string>
    <string name="please_wait">Please, wait!</string>
    <string name="share_dish">Share Dish</string>

    <string name="notification_title">Checkout new dish recipes</string>
    <string name="notification_subtitle">Tap for more details</string>
</resources>